# wcdb-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
bridge/: CMakeLists.txt  test.cpp
libwcdb-sys/: Cargo.toml  build.rs
libwcdb-sys/src/: WCDBBridging.rs  bridged.rs  lib.rs
libwcdb-sys/wrapper/: WCDBBridging.h
src/: main.rs
wcdb/: Cargo.toml
wcdb/src/: error.rs  lib.rs  main.rs  utils.rs
wcdb/src/core/: database.rs  handle.rs  mod.rs  prepared.rs
wcdb/src/winq/: convert.rs  identifier.rs  mod.rs  statement.rs  types.rs  value.rs
wcdb/src/winq/identifiers/: bind.rs  column.rs  column_constraint.rs  column_def.rs  common_table_expression.rs  expression.rs  foreign_key.rs  frame_spec.rs  indexed_column.rs  join.rs  literal_value.rs  mod.rs  ordering_term.rs  pragma.rs  qualified_table.rs  raise_function.rs  result_column.rs  schema.rs  table_constraint.rs  table_or_subquery.rs  upsert.rs  window_def.rs
